# nano-vllm-finance

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md  arrival.py  cache_microbench.py  datasets.py  kv_footprint.py  m1_benchmark.py  m2_benchmark.py  m3_benchmark.py  metrics.py  reporter.py  run_benchmark.py  runner.py  scenarios.py  serving_benchmark.py  vllm_client.py
benchmarks/results/: cache_microbench.json  nano_vllm_m1_rerun_20260704_205200.json
docs/: architecture.md  design.md  m1_design.md  milestones.md  optimizations.md  scenario.md
docs/blogs/: m1_building_nano_vllm.md  m1_building_nano_vllm.zh.md  m2_custom_kv_cache.md  m2_custom_kv_cache.zh.md  m3_paged_attention.md  m3_paged_attention.zh.md  m4_continuous_batching.zh.md
docs/design/: benchmark_environment.md  m1_design.md  m2_design.md  (+4 more)
examples/: simple_generate.py
nano_vllm/: __init__.py  block_pool.py  engine.py  generation.py  kv_cache.py  kv_cache_manager.py  paged_attention.py  paged_engine.py  sampler.py  test_hf_generate.py  test_load.py  types.py
scripts/: debug_attn_layer0.py  debug_attn_output.py  debug_combined.py  debug_forward.py  debug_idempotent.py  debug_numerics.py  debug_oproj.py  debug_rope.py  debug_single.py  debug_varlen.py  run_tests.sh
tests/: README.md  test_block_pool.py  test_engine.py  test_engine_m1.py  test_flash_attn_shapes.py  test_generation.py  test_gpu_model_runner.py  test_kv_cache.py  test_m1_vs_hf.py  test_m3_vs_hf.py  test_m4_vs_hf.py  test_sampler.py  test_scheduler.py  test_serving_benchmark.py  test_types.py
(+20 files in other folders)
